[build-system]
requires = [
    # mesonpy, version 0.13.0 which isn't released yet
    "meson-python @ git+https://github.com/mesonbuild/meson-python.git@61bb2b3315f4e312558778022ca6e87ffaed2700",
]
build-backend = 'mesonpy'

[project]
name = "extype"
authors = [
    { name = "Xpo Development", email = "biny@xpo.dev" },
    { name = "Elazar Cohen", email = "elazarcoh@gmail.com" },
]
description = "ExType is a Python package that allows you to externally extend types."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]

[tool.cibuildwheel]
skip = "pp*"
build-frontend = "build"
