[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "extype"
authors = [
    { name = "Xpo Development", email = "dev@xpo.dev" },
    { name = "Elazar Cohen", email = "elazarcoh@gmail.com" },
]
description = "ExType is a Python package that allows you to externally extend types."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]

[tool.cibuildwheel]
skip = "pp*"
build-frontend = "build"

[dependency-groups]
dev = [
    "meson>=1.10.1",
    "meson-python>=0.17.1",
    "ninja>=1.11.1.4",
]
test = ["pytest>=7.4.4", "typing-extensions>=4.7.1"]
